fix: similar properties spacing fix

--- a/src/client/components/Modules/TopSimilarPropertiesModule/style.scss
+++ b/src/client/components/Modules/TopSimilarPropertiesModule/style.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   width: 100%;
+  margin-top: -26px;
   min-height: 426px;
   .similarContainer {
     border-left: 1px solid;
